# infotecs_task

./: CMakeLists.txt  README.md
include/LogApp/: file_logger.hpp  log_app.hpp  task_queue.hpp
include/Logger/: file_logger.hpp  file_sink.hpp  logger.hpp  sink.hpp  socket_logger.hpp  socket_sink.hpp
include/Receiver/: log_server.hpp  stats_collector.hpp
src/LogApp/: file_logger.cpp  log_app.cpp
src/Logger/: file_logger.cpp  file_sink.cpp  logger.cpp  socket_logger.cpp  socket_sink.cpp
src/Receiver/: log_server.cpp  receiver.cpp  stats_collector.cpp
tests/: CMakeLists.txt  assert_true.hpp  test_logger.cpp
